--- a/index.html
+++ b/index.html
@@ -4,21 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,9 +20,76 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
-    </div>
-
+      <div class="row time-block">
+        <div id ="time" class="col-2 time-border">
+          9 am
+        </div>
+        <div id="plans" class="col-8"><textarea>
+          2 of 3 (wider)</textarea>
+        </div>
+        <button id="saveBtn" class="col-2">Save</button>
+        </div>
+        <div class="row time-block text-center">
+          <div id ="time" class="col-2 time-border">
+            10 am
+          </div>
+          <div id="plans" class="col-8">
+            2 of 3 (wider)
+          </div>
+          <button id="saveBtn" class="col-2">Save</button></div>
+      <div class="row time-block text-center">
+            <div id ="time" class="col-2 time-border">
+              11 am
+            </div>
+            <div id="plans" class="col-8">
+              2 of 3 (wider)
+            </div>
+            <button id="saveBtn" class="col-2">Save</button></div>
+      <div class="row time-block text-center">
+              <div id ="time" class="col-2 time-border">
+                Midday
+              </div>
+              <div id="plans" class="col-8">
+                2 of 3 (wider)
+              </div>
+              <button id="saveBtn" class="col-2">Save</button></div>
+      <div class="row time-block text-center">
+              <div id ="time" class="col-2 time-border"> 1pm</div>
+              <div id="plans" class="col-8">2 of 3 (wider)</div>
+              <button id="saveBtn" class="col-2">Save</button></div>
+      <div class="row time-block text-center">
+                <div id ="time" class="col-2 time-border"> 2pm</div>
+                <div id="plans" class="col-8">
+                  2 of 3 (wider)
+                </div>
+                <button id="saveBtn" class="col-2">Save</button></div>
+      <div class="row time-block text-center">
+                  <div id ="time" class="col-2 time-border">
+                    3pm
+                  </div>
+                  <div id="plans" class="col-8">
+                    2 of 3 (wider)
+                  </div>
+                  <button id="saveBtn" class="col-2">Save</button></div>  
+                  <div class="row time-block text-center">
+                    <div id ="time" class="col-2 time-border">
+                      4pm
+                    </div>
+                    <div id="plans" class="col-8">
+                      2 of 3 (wider)
+                    </div>
+                    <button id="saveBtn" class="col-2">Save</button></div>
+                    <div class="row time-block text-center">
+                      <div id ="time" class="col-2 time-border">
+                        5pm
+                      </div>
+                      <div id="plans" class="col-8">
+                        2 of 3 (wider)
+                      </div>
+                      <button id="saveBtn" class="col-2">Save</button></div>
+        </div></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
