saved text shows in console log - doesnt stay in local storage. Contacting BCS

--- a/index.html
+++ b/index.html
@@ -21,24 +21,20 @@
     </header>
     <div class="container">
       <div class="row time-block">
-        <div id ="time" class="col-2 time-border">
+        <div id ="time9" class="col-2 time-border">
           9 am
         </div>
-        <div id="plans" class="col-8"><textarea>
-          2 of 3 (wider)</textarea>
-        </div>
+        <input type="text" class="textarea col-8" name="plans" placeholder="Add a Task!" />
         <button id="saveBtn" class="col-2">Save</button>
         </div>
         <div class="row time-block text-center">
-          <div id ="time" class="col-2 time-border">
+          <div id ="time10" class="col-2 time-border">
             10 am
           </div>
-          <div id="plans" class="col-8">
-            2 of 3 (wider)
-          </div>
+          <input type="text" class="textarea col-8" name="plans" placeholder="Add a Task!" />
           <button id="saveBtn" class="col-2">Save</button></div>
       <div class="row time-block text-center">
-            <div id ="time" class="col-2 time-border">
+            <div id ="time11" class="col-2 time-border">
               11 am
             </div>
             <div id="plans" class="col-8">
@@ -46,7 +42,7 @@
             </div>
             <button id="saveBtn" class="col-2">Save</button></div>
       <div class="row time-block text-center">
-              <div id ="time" class="col-2 time-border">
+              <div id ="timeMidday" class="col-2 time-border">
                 Midday
               </div>
               <div id="plans" class="col-8">
@@ -54,17 +50,17 @@
               </div>
               <button id="saveBtn" class="col-2">Save</button></div>
       <div class="row time-block text-center">
-              <div id ="time" class="col-2 time-border"> 1pm</div>
+              <div id ="time1" class="col-2 time-border"> 1pm</div>
               <div id="plans" class="col-8">2 of 3 (wider)</div>
               <button id="saveBtn" class="col-2">Save</button></div>
       <div class="row time-block text-center">
-                <div id ="time" class="col-2 time-border"> 2pm</div>
+                <div id ="time2" class="col-2 time-border"> 2pm</div>
                 <div id="plans" class="col-8">
                   2 of 3 (wider)
                 </div>
                 <button id="saveBtn" class="col-2">Save</button></div>
       <div class="row time-block text-center">
-                  <div id ="time" class="col-2 time-border">
+                  <div id ="time3" class="col-2 time-border">
                     3pm
                   </div>
                   <div id="plans" class="col-8">
@@ -72,7 +68,7 @@
                   </div>
                   <button id="saveBtn" class="col-2">Save</button></div>  
                   <div class="row time-block text-center">
-                    <div id ="time" class="col-2 time-border">
+                    <div id ="time4" class="col-2 time-border">
                       4pm
                     </div>
                     <div id="plans" class="col-8">
@@ -80,7 +76,7 @@
                     </div>
                     <button id="saveBtn" class="col-2">Save</button></div>
                     <div class="row time-block text-center">
-                      <div id ="time" class="col-2 time-border">
+                      <div id ="time5" class="col-2 time-border">
                         5pm
                       </div>
                       <div id="plans" class="col-8">
